--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -40,12 +40,12 @@
             <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
                 <img class="carousel-image" src="/assets/img/oovervew.png" alt="Placeholder Image">
-                <div class="text">Caption Three</div>
+                <div class="text">A overview of the website at hand</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">4 / 5</div>
                 <img class="carousel-image" src="/assets/img/proj.png" alt="Placeholder Image">
-                <div class="text">Caption Four</div>
+                <div class="text">A page showcasing past projects with the purpose of showing the increasing skill from each task</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
